  of cStatus::OsdCurrentItem2() calls cStatus::OsdCurrentItem().
- Fixed unnecessary calls to cStatus::OsdCurrentItem2() when scrolling.
- Added missing calls to cStatus::MsgOsdStatusMessage() and added the new virtual function
  cStatus::OsdStatusMessage2(), which can be used to get the type of the message (thanks
  to Markus Ehrnsperger). Plugins that implemented cStatus::OsdStatusMessage() will still
  work as before, because the default implementation of cStatus::OsdStatusMessage2() calls
  cStatus::OsdStatusMessage().
- Adjusted PLUGINS.html to the new API version numbering introduced in version 2.7.2.
- The function cPlugin::MainThreadHook() has been deprecated and may be removed in future
  versions. Use proper locking instead.
- Fixed unnecessary redisplays of menus.
- Added '~' to the list of delimiters in cTextWrapper (thanks to Stefan Hofmann).
- Fixed progress display when switching from "pause" to "slow back" (reported by Andreas
  Baierl).
- Fixed spurious fast frames when switching from "slow back" to "slow forward".
- Fixed cPtsIndex::FindFrameNumber() to handle the case where Pts points to an I-frame.
- Added missing locks to SetMenuItem() functions.
- Revised locking in cMenuSchedule and cMenuWhatsOn.

2025-03-03:

- Added the "override" keyword to virtual functions reimplemented in derived classes.
  Plugins may want to do the same, but don't have to.
- Removed -Werror=overloaded-virtual from Makefile and Make.config(.template).
  Plugins may want to do the same, but don't have to.
- Renamed cStatus::Osd*2() to cStatus::Osd*().
  Plugins that use these recently introduced functions need to remove the '2' from the name.
- The new virtual function cSkinDisplayMenu::SetItemEvent(..., const cTimer *Timer) can be
  used to get full access to the timer (if any) defined for this event.
- Added a mutex lock to protect creating/deleting cStatus objects (suggested by Markus
  Ehrnsperger).